--- a/Csr_ssr/public/index.html
+++ b/Csr_ssr/public/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./jquery.js"></script>
 </head>
 <body>
+    <h1>hello world</h1>
+    <h2>you are learning client side rendering</h2>
+    <input type="text" placeholder="enter any text" id="inp" name="name"/>
+    <button id="btn">add</button>
     
+    <ul id="list"></ul>
+
+    <script src="./dom.js"></script>
 </body>
 </html>
